--- a/.github/workflows/build-android-apk.yaml
+++ b/.github/workflows/build-android-apk.yaml
@@ -1,7 +1,7 @@
 name: Build Release Android APK
 on:
   push:
-	branches: [ "master" ]
+	branches: [ "develop" ]
  
 jobs:
   Build-Release-Android-APK:
